Fix column sort buttons, fix dark mode background

--- a/ome2024-ngff-challenge/src/app.css
+++ b/ome2024-ngff-challenge/src/app.css
@@ -28,7 +28,17 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: hsl(237, 86%, 64%);
+}
+
+body {
+  --bg-opacity: 0.5;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    --bg-opacity: 0;
+  }
 }
 
 body {
@@ -40,7 +50,7 @@ body {
   height: 100%;
   background-image: linear-gradient(
       180deg,
-      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, var(--bg-opacity)),
       rgba(255, 255, 255, 0)
     ),
     repeating-linear-gradient(
@@ -96,7 +106,6 @@ h1 {
 main {
   max-width: 1280px;
   margin: 0 auto;
-  text-align: center;
   position: relative;
   z-index: 10;
 }
